# tsd-api-client

./: .gitignore  Containerfile  LICENSE  README.md  Vagrantfile  cliff.toml  notes.md  pyproject.toml  release-notes.md  requirements.txt  setup.py  testing
.github/workflows/: changelog.yaml  container.yaml  pr-merge-check.yaml  pr-merge.yaml  publish.yaml  release.yaml
examples/: automation.md
scripts/: data2tsd  tac  tacl  tacl_admin  tacl_auth  tacl_data  tsd-s3cmd
test/: conftest.py  conftet.py  test_main.py
tsdapiclient/: _version.py  administrator.py  authapi.py  client.py  client_config.py  config.py  configurer.py  crypto.py  environment.py  exc.py  fileapi.py  guide.py  retrievalapi.py  session.py  storageapi.py  sync.py  tacl.py  tacl2.py  tools.py
tsdapiclient/examplekeys/: public.pem
